--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -30,12 +30,12 @@
      
 }
 
-.article-image{
+.article-image {
     max-width: 100%;
-    max-height: 400px;
-    display: block ;
-    margin: 30px auto;
-    object-fit: contain;
+    height: auto;
+    margin: 20px 0;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
 .sub-heading{
@@ -106,4 +106,42 @@
 
 .comment-btn:hover {
     background: #333;
+}
+
+.banner {
+    width: 100%;
+    height: 400px;
+    position: relative;
+    background: #e7e7e7;
+    background-size: cover;
+    background-position: center;
+}
+
+.blog {
+    width: 70vw;
+    min-width: 400px;
+    height: auto;
+    display: block;
+    margin: 60px auto;
+    padding: 50px 0;
+}
+
+.title {
+    font-size: 50px;
+    font-weight: 600;
+    color: #2d2d2d;
+    margin: 30px 0;
+}
+
+.published {
+    font-size: 16px;
+    color: #888;
+    margin: 20px 0;
+}
+
+.article {
+    margin: 20px 0;
+    line-height: 1.7;
+    color: #2d2d2d;
+    font-size: 18px;
 }
