--- a/public/css/editor.css
+++ b/public/css/editor.css
@@ -12,13 +12,10 @@
     position: absolute;
     bottom: 20px;
     right: 20px;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
+    padding: 10px 20px;
+    border-radius: 30px;
     background: rgba(0, 0, 0, 0.3);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    color: white;
     cursor: pointer;
     transition: all 0.3s ease;
 }
@@ -29,6 +26,8 @@
 
 .banner-upload-btn img{
     width: 20px;
+    height: 20px;
+    object-fit: contain;
     filter: invert(1);
 }
 .blog{
